Fixed the horizontal scroll issue

--- a/src/index.css
+++ b/src/index.css
@@ -32,7 +32,7 @@ box-shadow: 0 4px 14px rgba(12, 12, 14, 0.06);
 
 
 html, body {
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
   scrollbar-width: none;
   -ms-overflow-style: none;
 }
